--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 		<title>Erik Ringsmuth - GitHub</title>
 	</head>
 	<body>
-		Hello World!
+		<script language="javascript">window.onload = function() { window.location = '/view-js'; };</script>
 	</body>
 </html>
