--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="inner cover">
             <img src="http://www.gravatar.com/avatar/5491ac2e7c74eb1253df058e3d8d3e83?s=200" class="img-thumbnail">
             <h1 class="cover-heading">Mt. Biker, Skier, Software Engineer</h1>
-            <p class="lead">I build things for the web. When I'm not writing code you'll find biking and skiing.</p>
+            <p class="lead">I build things for the web.</p>
             <div class="row">
               <div class="col-sm-4"><a href="https://github.com/erikringsmuth" class="btn btn-lg btn-default"><i class="fa fa-github"></i> GitHub</a></div>
               <div class="col-sm-4"><a href="http://erikringsmuth.github.io/requirejs-router/" class="btn btn-lg btn-default">RequireJS Router</a></div>
