adding suri.io link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 class="cover-heading">Mt. Biker, Skier, Software Engineer</h1>
             <p class="lead">I build things for the web.</p>
             <div class="row">
-              <div class="col-sm-4"><a href="https://github.com/erikringsmuth" class="btn btn-lg btn-default"><i class="fa fa-github"></i> GitHub</a></div>
+              <div class="col-sm-4"><a href="http://www.suri.io/" class="btn btn-lg btn-default"><i class="fa fa-cloud"></i> suri.io</a></div>
               <div class="col-sm-4"><a href="http://erikringsmuth.github.io/requirejs-router/" class="btn btn-lg btn-default">RequireJS Router</a></div>
               <div class="col-sm-4"><a href="http://erikringsmuth.github.io/nex-js/" class="btn btn-lg btn-default">{nex.js}</a></div>
             </div>
