higher quality image

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </div>
 
           <div class="inner cover">
-            <img src="http://www.gravatar.com/avatar/5491ac2e7c74eb1253df058e3d8d3e83?s=200" class="img-thumbnail">
+            <img src="http://www.gravatar.com/avatar/5491ac2e7c74eb1253df058e3d8d3e83?s=400" height="200" width="200" class="img-thumbnail">
             <h1 class="cover-heading">Mt. Biker, Skier, Software Engineer</h1>
             <p class="lead">I build things for the web.</p>
             <div class="row">
