--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="https://twitter.com/erikringsmuth"><i class="fa fa-twitter"></i> Twitter</a></li>
                 <li><a href="http://stackoverflow.com/users/3148201/erik-ringsmuth"><i class="fa fa-stack-overflow"></i> StackOverflow</a></li>
                 <li><a href="http://www.linkedin.com/in/erikringsmuth"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
+                <li><a href="https://medium.com/@ErikRingsmuth">Medium</a></li>
               </ul>
             </div>
           </div>
