--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="inner">
               <h3 class="masthead-brand">Erik Ringsmuth</h3>
               <ul class="nav masthead-nav">
-                <li><a href="https://medium.com/@ErikRingsmuth"><i class="fa fa-pencil-square-o"></i> Blog</a></li>
-                <li><a href="https://github.com/erikringsmuth"><i class="fa fa-github"></i> GitHub</a></li>
                 <li><a href="https://twitter.com/erikringsmuth"><i class="fa fa-twitter"></i> Twitter</a></li>
+                <li><a href="https://medium.com/@ErikRingsmuth"><i class="fa fa-pencil-square-o"></i> Blog</a></li>
+                <li><a href="http://www.linkedin.com/in/erikringsmuth"><i class="fa fa-medium"></i> Resume</a></li>
+                <li><a href="https://github.com/erikringsmuth"><i class="fa fa-github"></i> GitHub</a></li>
                 <li><a href="http://www.linkedin.com/in/erikringsmuth"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
-                <li><a href="http://stackoverflow.com/users/3148201/erik-ringsmuth"><i class="fa fa-stack-overflow"></i> StackOverflow</a></li>
               </ul>
             </div>
           </div>
@@ -47,7 +47,7 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>by <a href="https://twitter.com/erikringsmuth">@erikringsmuth</a></p>
+              <p>Say hello <a href="https://twitter.com/erikringsmuth">@erikringsmuth</a></p>
             </div>
           </div>
 
@@ -57,9 +57,6 @@
 
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
