--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
-<!-- Copyright (C) 2014 Erik Ringsmuth <erik.ringsmuth@gmail.com> -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -13,11 +12,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-
     <div class="site-wrapper">
-
       <div class="site-wrapper-inner">
-
         <div class="cover-container">
 
           <div class="masthead clearfix">
@@ -26,9 +22,9 @@
               <ul class="nav masthead-nav">
                 <li><a href="https://twitter.com/erikringsmuth"><i class="fa fa-twitter"></i> Twitter</a></li>
                 <li><a href="https://medium.com/@ErikRingsmuth"><i class="fa fa-pencil-square-o"></i> Blog</a></li>
-                <li><a href="http://www.linkedin.com/in/erikringsmuth"><i class="fa fa-medium"></i> Resume</a></li>
+                <li><a href="http://registry.jsonresume.org/erikringsmuth?theme=elegant_fork"><i class="fa fa-medium"></i> Resume</a></li>
                 <li><a href="https://github.com/erikringsmuth"><i class="fa fa-github"></i> GitHub</a></li>
-                <li><a href="http://www.linkedin.com/in/erikringsmuth"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/erikringsmuth"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
               </ul>
             </div>
           </div>
@@ -39,9 +35,9 @@
             <p class="lead">I build things for the web.</p>
             <div class="row">
               <div class="col-sm-3"><a href="http://www.suri.io/" class="btn btn-lg btn-default"><i class="fa fa-cloud"></i> suri.io</a></div>
-              <div class="col-sm-3"><a href="http://erikringsmuth.github.io/app-router/" class="btn btn-lg btn-default">app-router</a></div>
-              <div class="col-sm-3"><a href="http://erikringsmuth.github.io/requirejs-router/" class="btn btn-lg btn-default">RequireJS Router</a></div>
-              <div class="col-sm-3"><a href="http://erikringsmuth.github.io/nex-js/" class="btn btn-lg btn-default">{nex.js}</a></div>
+              <div class="col-sm-3"><a href="https://erikringsmuth.github.io/app-router/" class="btn btn-lg btn-default">app-router</a></div>
+              <div class="col-sm-3"><a href="https://erikringsmuth.github.io/requirejs-router/" class="btn btn-lg btn-default">RequireJS Router</a></div>
+              <div class="col-sm-3"><a href="https://erikringsmuth.github.io/nex-js/" class="btn btn-lg btn-default">{nex.js}</a></div>
             </div>
           </div>
 
@@ -52,13 +48,7 @@
           </div>
 
         </div>
-
       </div>
-
     </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
   </body>
 </html>
